[package]
name = "soothsayer"
version = "0.1.0"
edition = "2021"
authors = ["Cary Wolff <cwolff@seer.la>"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "3.1.9", features = ["derive"] }
anyhow = "1.0"
confy = "0.3.1"
